--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -23,7 +23,13 @@ border: 2px solid green ;
 
 .input{
 padding-left: 100px;
-margin-left: 90px;
+}
+.input_conteiner{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+
 }
 
 .timer {
